--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+
+body {
+  font-family: 'Arial';
+  margin: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -8,14 +15,15 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  background-color: #33ff00;
+  height: 100px;
+  padding: 15px;
+  color: black;
 }
 
-.App-title {
-  font-size: 1.5em;
+.title {
+  font-size: 15px;
+  font-family: "Arial"
 }
 
 .App-intro {
