--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@ body {
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 50px;
 }
 
 .App-header {
@@ -19,6 +18,7 @@ body {
   height: 100px;
   padding: 15px;
   color: black;
+  font-size: 17px
 }
 
 .title {
