--- a/src/components/CartItem.css
+++ b/src/components/CartItem.css
@@ -1,35 +1,37 @@
-li.Product {
+li.CartItem {
   display: flex;
   align-content: space-between;
   align-items: flex-start;
   color: black;
   background-color: white;
   border: 2px solid #33ff00;
-  padding: 25px;
+  padding: 21px;
   margin: 10px;
-
-
-
 }
 
-li.Product p {
+li.CartItem p {
   flex: 1;
-  padding: 25px;
+  padding: 21px;
   font-size: 21px;
   font-family: "Arial";
 }
 
-li.Product p.name {
+li.CartItem p.name {
   font-weight: bold;
   font-size: 21px;
 }
 
-li.Product p.price {
+li.CartItem p.price {
   max-width: 50px;
   font-size: 17px;
 }
 
-li.Product p.quantity {
+li.CartItem p.quantity {
   max-width: 50px;
   font-size: 17px;
+}
+
+li.CartItem p.total {
+  font-weight: bold;
+  font-size: 21px;
 }
