--- a/src/components/CheckOutButton.css
+++ b/src/components/CheckOutButton.css
@@ -1,15 +1,16 @@
-button.PlusOne {
+button.CheckOut {
   display: flex;
   border: 2px solid white;
   align-content: center;
   font-size: 30px;
   margin: 21px auto;
-  padding: 7px;
+  padding: 11px;
   cursor: pointer;
-  max-width: 50px;
+  max-width: 500px;
   background-color: #33ff00;
+
 }
 
-button.PlusOne:hover {
+button.CheckOut:hover {
   background-color: blue;
 }
