--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -7,3 +7,11 @@ ul.Table {
   color: black;
   list-style-type: none;
 }
+ul.total {
+  font-weight: bold;
+  font-size: 21px;
+  text-align: left;
+  color: black;
+  background-color: white;
+  border: 2px solid #33ff00;
+}
